# shallow-snow

./: README.md  pyproject.toml
src/shallow-snow/: io.py  stats.py
