[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shallow-snow"
version = "0.1.0"
description = "Statistical analysis of areas that tend to have shallow snow"
readme = "README.md"
authors = [
    { name = "Joe Ammatelli", email = "joseph.ammatelli@dri.edu" },
    { name = "Bjoern Bingham", email = "bjoern.bingham@dri.edu" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]